footer backfroud changed

--- a/project/css/style.css
+++ b/project/css/style.css
@@ -834,8 +834,8 @@ ul.dropdown-menu.drp-mnu li a i {
 /*-- //newsletter --*/
 /*-- footer --*/
 .footer{
-	padding:4em 0;
-	background:#212121;
+	padding:1.5em 0;
+	background:#11733e;;
 }
 .w3_footer_grid h3{
 	font-size:1.2em;
